# ARK_kilobots_dhtf_server

./: .gitignore  area.h  dhtfEnvironment.cpp  dhtfEnvironment.h  dhtfExperiment.cpp  dhtfExperiment.h  kilobot.cpp  kilobotenvironment.h  readme.md
ARK_exp_client/: DHTF.pro  area.h  clientStuff.cpp  dhtfEnvironment.cpp  dhtfEnvironment.h  dhtfExperiment.cpp  dhtfExperiment.h
ARK_exp_server/: DHTF.pro  area.h  dhtfEnvironment.cpp  dhtfEnvironment.h  dhtfExperiment.cpp  dhtfExperiment.h  kilobot.h  kilobotenvironment.h  serverStuff.cpp
ARK_exp_standalone/: DHTF.pro  area.h  dhtfEnvironment.cpp  dhtfEnvironment.h  dhtfExperiment.cpp  dhtfExperiment.h  global.h
Kilobot_behaviour/: distribution_functions.c  distribution_functions.h  kilobot_dhtf.c  rotation_test.c
M-ARK_ARGoS/bash_scripts/: dhtf_client_server.sh  dhtfc_experiment.argos  dhtfs_experiment.argos  mark_blue.sh  mark_mixed.sh  mark_red.sh
M-ARK_ARGoS/behaviors/: CMakeLists.txt  kilobot_ALF_dhtf.c
M-ARK_ARGoS/experiment/: kilobot_ALF_dhtf_client.argos  kilobot_ALF_dhtf_server.argos
M-ARK_ARGoS/loop_functions/: area.h  kilobot_ALF_dhtf.cpp  kilobot_ALF_dhtf.h
M-ARK_ARGoS/src/examples/behaviors/: CMakeLists.txt  kilobot_ALF_dhtf.c
M-ARK_ARGoS/src/examples/experiments/: kilobot_ALF_cre_client.argos  kilobot_ALF_cre_server.argos  kilobot_ALF_dhtf_client.argos  kilobot_ALF_dhtf_server.argos
M-ARK_ARGoS/src/examples/loop_functions/ARK_loop_functions/: CMakeLists.txt
